# BASIC

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md
Documentation/: ClassDiagram.puml  ExecutorClasses.puml  InterpreterClasses.puml  LexerClasses.puml  ParserClasses.puml
include/: BasicBinaryExpression.hpp  BasicConsole.hpp  BasicEndStatement.hpp  BasicEnv.hpp  BasicExecutor.hpp  BasicExpression.hpp  BasicFileConsole.hpp  BasicGoSubStatement.hpp  BasicGotoStatement.hpp  BasicIfStatement.hpp  BasicInputStatement.hpp  BasicIntExpression.hpp  BasicInterpreter.hpp  BasicLetStatement.hpp  BasicLexer.hpp  BasicParser.hpp  BasicPrintStatement.hpp  BasicReturnStatement.hpp  BasicRunStatement.hpp  BasicStatement.hpp  BasicTerminal.hpp  BasicToken.hpp  BasicUnaryExpression.hpp  BasicVarExpression.hpp
src/: BasicBinaryExpression.cpp  BasicEndStatement.cpp  BasicEnv.cpp  BasicExecutor.cpp  BasicFileConsole.cpp  BasicGoSubStatement.cpp  BasicGotoStatement.cpp  BasicIfStatement.cpp  BasicInputStatement.cpp  BasicIntExpression.cpp  BasicInterpreter.cpp  BasicLetStatement.cpp  BasicLexer.cpp  BasicParser.cpp  BasicPrintStatement.cpp  BasicReturnStatement.cpp  BasicRunStatement.cpp  BasicTerminal.cpp  BasicToken.cpp  BasicUnaryExpression.cpp  BasicVarExpression.cpp  Main.cpp  (+1 more)
tests/: BasicBinaryExpressionTest.cpp  BasicEnvTest.cpp  BasicFileConsoleTest.cpp  BasicGoSubStatementTest.cpp  BasicGotoStatementTest.cpp  BasicIfStatementTest.cpp  BasicInputStatementTest.cpp  BasicLetStatementTest.cpp  BasicLexerTest.cpp  BasicParserTest.cpp  BasicPrintStatementTest.cpp  BasicSystemTest.cpp  BasicTestConsole.cpp  BasicTestConsole.hpp  BasicUnaryExpressionTest.cpp  CMakeLists.txt
tests/system/000_print_hello/: source.bas
tests/system/001_overwrite/: source.bas
tests/system/002_run_nothing/: source.bas
tests/system/003_let_and_print/: source.bas
tests/system/004_addition/: source.bas
tests/system/005_multiplication_precedences/: source.bas
tests/system/006_parenthesis/: source.bas
tests/system/007_unary_minus/: source.bas
tests/system/008_if_true/: source.bas
tests/system/009_if_false/: source.bas
tests/system/010_overwrite_lines/: expected_stdout.txt  source.bas
tests/system/011_division_by_zero/: expected_stdout.txt  source.bas
tests/system/012_end/: source.bas
tests/system/013_add_subroutine/: expected_stdout.txt  source.bas
tests/system/014_ascii_to_number/: expected_stdout.txt  source.bas  stdin.txt
tests/system/015_var/: expected_stdout.txt  source.bas
tests/system/016_var_all/: expected_stdout.txt  source.bas
tests/system/017_sort/: source.bas  stdin.txt
tests/system/018_run_linenumber/: expected_stdout.txt  source.bas
tests/system/019_no_overwrite_err/: expected_stdout.txt  source.bas
(+7 files in other folders)
